# mud-r

./: .gitignore  Cargo.toml  README.md  autorun  web_client.html
.github/workflows/: rust.yml
lib/etc/: .gitignore
lib/misc/: messages
lib/text/: greetings
lib/world/mob/: 15.mob  25.mob  33.mob  54.mob
lib/world/wld/: 120.wld  25.wld  30.wld  54.wld  62.wld  79.wld
log/: .gitignore  README
src/: act_comm.rs  act_informative.rs  act_item.rs  act_movement.rs  act_offensive.rs  act_other.rs  act_social.rs  act_wizard.rs  alias.rs  ban.rs  boards.rs  castle.rs  class.rs  config.rs  constants.rs  db.rs  depot.rs  fight.rs  graph.rs  handler.rs  house.rs  interpreter.rs  limits.rs  magic.rs  mail.rs  main.rs  mobact.rs  modify.rs  objsave.rs  screen.rs  shops.rs  spec_assign.rs  spec_procs.rs  spell_parser.rs  spells.rs  structs.rs  telnet.rs  util.rs  weather.rs
tests/: integration_tests.rs
