[package]
name = "mudr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns-lookup = "1.0.8"
env_logger = "0.10.0"
log = "0.4.17"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }
hmac = "0.12.1"
sha2 = "0.10.6"
rand = "0.8.5"
regex = "1"
chrono = "0.4.24"
