[package]
name = "mudr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns-lookup = "2.0.4"
env_logger = "0.11.3"
log = "0.4.21"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }
hmac = "0.12.1"
sha2 = "0.10.8"
rand = "0.8.5"
regex = "1.10.4"
chrono = "0.4.38"
log4rs = "1.3.0"
